{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 75,
  "lineage": "028e75f5-556c-bdc9-e9ee-629f79d46d9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Agent2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:263431666784:instance/i-068e4501c2d43fe8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068e4501c2d43fe8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2 Toturial",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d05eb9e6a5b33646",
            "private_dns": "ip-40-0-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "40.0.1.128",
            "public_dns": "ec2-3-81-115-181.compute-1.amazonaws.com",
            "public_ip": "3.81.115.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fa1a0c446f6754c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026ac91d476579d76",
            "tags": {
              "Name": "Agent2"
            },
            "tags_all": {
              "Name": "Agent2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0e3c0d7e58a9dba"
            ]
          },
          "dependencies": [
            "aws_security_group.Allow_SSH",
            "module.network.aws_subnet.public-1-jenkins",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:security-group/sg-0d0e3c0d7e58a9dba",
            "description": "Allow SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0e3c0d7e58a9dba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allowing-SSH",
            "name_prefix": "",
            "owner_id": "263431666784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allowing-SSH"
            },
            "tags_all": {
              "Name": "allowing-SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-033df6bf108e56e5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:internet-gateway/igw-0e961e30b052d7499",
            "id": "igw-0e961e30b052d7499",
            "owner_id": "263431666784",
            "tags": {
              "Name": "main-igw-jenkins"
            },
            "tags_all": {
              "Name": "main-igw-jenkins"
            },
            "vpc_id": "vpc-033df6bf108e56e5e"
          },
          "dependencies": [
            "module.network.aws_subnet.public-1-jenkins",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:route-table/rtb-02d40101897dabd4f",
            "id": "rtb-02d40101897dabd4f",
            "owner_id": "263431666784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e961e30b052d7499",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT_Terraform"
            },
            "tags_all": {
              "Name": "Public_RT_Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-033df6bf108e56e5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw-jenkins",
            "module.network.aws_subnet.public-1-jenkins",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004d86ed665ff44d6",
            "route_table_id": "rtb-02d40101897dabd4f",
            "subnet_id": "subnet-026ac91d476579d76"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw-jenkins",
            "module.network.aws_route_table.Public_RT_Terraform",
            "module.network.aws_subnet.public-1-jenkins",
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:subnet/subnet-026ac91d476579d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "40.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026ac91d476579d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263431666784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1-jenkins"
            },
            "tags_all": {
              "Name": "public-1-jenkins"
            },
            "vpc_id": "vpc-033df6bf108e56e5e"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:263431666784:vpc/vpc-033df6bf108e56e5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.0.0.0/16",
            "default_network_acl_id": "acl-05bec345b11d8a590",
            "default_route_table_id": "rtb-036b2a8ceda91c02f",
            "default_security_group_id": "sg-054e562f57e55fd06",
            "dhcp_options_id": "dopt-0f8644549e86e6b34",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033df6bf108e56e5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036b2a8ceda91c02f",
            "owner_id": "263431666784",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}